@@ -30,6 +30,9 @@ class ScheduleTest {
     static void testDailySchedule();
     static void testEndDateWithEomAdjustment();
     static void testDatesPastEndDateWithEomAdjustment();
+    static void testForwardDatesWithEomAdjustment();
+    static void testBackwardDatesWithEomAdjustment();
+    static void testDoubleFirstDateWithEomAdjustment();
     static boost::unit_test_framework::test_suite* suite();
 };
 
